cashier menu + receipt, manager menu + staff + receipt + bonus, chef complete, client complete